--- a/Lecture2-R-basics/07_radar-plot.Rmd
+++ b/Lecture2-R-basics/07_radar-plot.Rmd
@@ -126,54 +126,6 @@ ggplot(mean.iris, aes(x = variable, y = value)) +
 <span style="color:white">For the `fbi` data:</span>
 
 - <span style="color:white">Choose `California` and `New York`</span>
-- <span style="color:white">Choose Year `1971` and `2016`</span>
+- <span style="color:white">Choose Year `1981` and `2016`</span>
 - <span style="color:white">Make a radar plot to compare `State`, `Year` and `Type` by the crime rate</span>
-- <span style="color:white">Remove `Rape` and `Legacy.rape` for this plot</span>
-
-## Solution
-
-```{r, eval = FALSE, echo = FALSE}
-library(classdata)
-
-crime.compare = dplyr::filter(fbi, Year %in% c(1971, 2016), State %in% c("California", "New York")) %>% mutate(Abb = as.factor(Abb))
-levels(crime.compare$Type)[1] = "Assault"
-levels(crime.compare$Type)[5] = "MV.theft"
-levels(crime.compare$Type)[6] = "Murder"
-
-crime.compare %>% filter(Type != "Legacy.rape", Type != "Rape") %>%
-  ggplot(aes(x = Type, y = log(Count / Population * 10^5))) +
-  geom_polygon(aes(group = Abb, color = Abb), fill = NA, size = 2, show.legend = FALSE) +
-  geom_line(aes(group = Abb, color = Abb), size = 2) +
-  facet_wrap(~Year) + 
-  theme(strip.text.x = element_text(size = rel(0.8)),
-        axis.text.x = element_text(size = rel(0.8)),
-        axis.ticks.y = element_blank(),
-        axis.text.y = element_blank()) +
-  xlab("") + ylab("") +
-  guides(color = guide_legend(ncol=2)) +
-  coord_radar()
-```
-
-## Solution
-
-```{r, echo = FALSE, eval = FALSE}
-library(classdata)
-
-crime.compare = dplyr::filter(fbi, Year %in% c(1971, 2016), State %in% c("California", "New York")) %>% mutate(Abb = as.factor(Abb))
-levels(crime.compare$Type)[1] = "Assault"
-levels(crime.compare$Type)[5] = "MV.theft"
-levels(crime.compare$Type)[6] = "Murder"
-
-crime.compare %>% filter(Type != "Legacy.rape", Type != "Rape") %>%
-  ggplot(aes(x = Type, y = log(Count / Population * 10^5))) +
-  geom_polygon(aes(group = Abb, color = Abb), fill = NA, size = 2, show.legend = FALSE) +
-  geom_line(aes(group = Abb, color = Abb), size = 2) +
-  facet_wrap(~Year) + 
-  theme(strip.text.x = element_text(size = rel(0.8)),
-        axis.text.x = element_text(size = rel(0.8)),
-        axis.ticks.y = element_blank(),
-        axis.text.y = element_blank()) +
-  xlab("") + ylab("") +
-  guides(color = guide_legend(ncol=2)) +
-  coord_radar()
-```
+- <span style="color:white">Remove `rape.legacy` and `rape.revised` for this plot</span>
