--- a/03_tidyverse/01_dplyr.Rmd
+++ b/03_tidyverse/01_dplyr.Rmd
@@ -51,10 +51,10 @@ all functions of the tidyverse have `data` as their first element
 
 Important: do not use `$` notation for variables within these functions, e.g: 
 
-`ggplot(data = fbi, aes(x = Year, y = Count)) + geom_point()`
+`ggplot(data = fbi, aes(x = year, y = count)) + geom_point()`
 
 
-`filter(fbi, Year>=2019, State=="Iowa")`
+`filter(fbi, year>=2019, state=="Iowa")`
 
 
 ## The pipe operator `%>%`
@@ -73,16 +73,16 @@ Consequences:
 ## Using the pipe `%>%`
 
 ```
-ggplot(data = filter(fbi, Type=="Murder.and.nonnegligent.Manslaughter"), 
-aes(x = Year, y = Count)) + geom_point()
+ggplot(data = filter(fbi, type=="Murder.and.nonnegligent.Manslaughter"), 
+aes(x = year, y = count)) + geom_point()
 ```
 
 becomes
 
 ```
 fbi %>% 
-  filter(Type=="Murder.and.nonnegligent.Manslaughter") %>%
-  ggplot(aes(x = Year, y = Count)) + 
+  filter(type=="Murder.and.nonnegligent.Manslaughter") %>%
+  ggplot(aes(x = year, y = count)) + 
     geom_point()
 ```
 
@@ -94,7 +94,7 @@ select a subset of the observations (horizontal selection):
 library(classdata)
 library(dplyr)
 
-fbi %>% filter(Type=="Burglary", Year==2014) %>% head()
+fbi %>% filter(type=="burglary", year==2014) %>% head()
 ```
 
 
@@ -108,7 +108,7 @@ Successive variables break ties in previous ones
 `desc` stands for descending, otherwise rows are sorted from smallest to largest
 
 ```{r, message=FALSE}
-fbi %>% arrange(desc(Year), Type, desc(Count)) %>% head()
+fbi %>% arrange(desc(year), type, desc(count)) %>% head()
 ```
 
 ## `select`
@@ -116,8 +116,8 @@ fbi %>% arrange(desc(Year), Type, desc(Count)) %>% head()
 Select specific variables of a data frame (vertical selection):
 
 ```{r}
-fbi %>% arrange(desc(Year), Type, desc(Count)) %>%
-  select(Type, Count, State, Year) %>% head()
+fbi %>% arrange(desc(year), type, desc(count)) %>%
+  select(type, count, state, year) %>% head()
 ```
 
 ## `mutate`
@@ -125,7 +125,7 @@ fbi %>% arrange(desc(Year), Type, desc(Count)) %>%
 Introduce a new variable into a data set or transform/update an old variable:
 
 ```{r}
-fbi %>% mutate(Rate = Count/Population*70000) %>% head()
+fbi %>% mutate(rate = count/population*70000) %>% head()
 ```
 
 
@@ -138,17 +138,17 @@ summarize observations into a (set of) one-number statistic(s):
 
 ```{r}
 fbi %>% 
-    summarise(mean_rate = mean(Count/Population*70000, na.rm=TRUE), 
-              sd_rate = sd(Count/Population*70000, na.rm = TRUE))
+    summarise(mean_rate = mean(count/population*70000, na.rm=TRUE), 
+              sd_rate = sd(count/population*70000, na.rm = TRUE))
 ```
 
 ## `summarise` and `group_by`
 
 ```{r}
 fbi %>%
-    group_by(Type) %>%
-    summarise(mean_rate = mean(Count/Population*70000, na.rm=TRUE), 
-              sd_rate = sd(Count/Population*70000, na.rm = TRUE))
+    group_by(type) %>%
+    summarise(mean_rate = mean(count/population*70000, na.rm=TRUE), 
+              sd_rate = sd(count/population*70000, na.rm = TRUE))
 ```
 
 
